<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
<!--
  ~ Copyright 2007 Sergei Maslyukov at riverock.org
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<!--

http://maven.apache.org/guides/mini/guide-apt-format.html
http://www.sonatype.com/book/reporting.html

-->
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.riverock</groupId>
    <artifactId>dbrevision</artifactId>
    <packaging>jar</packaging>
    <version>3.0.3</version>
    <name>DbRevision engine</name>
    <url>http://dbrevision.riverock.org</url>
    <organization>
        <name>Riverock community</name>
        <url>http://www.riverock.org</url>
    </organization>
    <licenses>
        <license>
            <name>Apache Lccense 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
        </license>
    </licenses>

    <scm>
        <developerConnection>scm:svn:https://dbrevision.svn.sourceforge.net/svnroot/dbrevision/trunk
        </developerConnection>
        <connection>scm:svn:https://dbrevision.svn.sourceforge.net/svnroot/dbrevision/trunk</connection>
        <url>http://dbrevision.svn.sourceforge.net/viewvc/dbrevision/trunk</url>
    </scm>

    <properties>
        <lombok.version>1.18.8</lombok.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!--        <maven.compiler.source>11</maven.compiler.source>-->
        <!--        <maven.compiler.target>11</maven.compiler.target>-->
    </properties>

    <developers>
        <developer>
            <id>serg</id>
            <name>Serge Maslyukov</name>
            <email>serg_main@yahoo.com</email>
            <url>http://webmill.riverock.org</url>
            <organization>Riverock</organization>
            <organizationUrl>http://www.riverock.org</organizationUrl>
            <roles>
                <role>Architect</role>
                <role>Developer</role>
            </roles>
            <timezone>+3</timezone>
            <!--
                  <properties>
                    <gpg-key></gpg-key>
                  </properties>
            -->
        </developer>
    </developers>

    <repositories>
        <repository>
            <id>Riverock repo</id>
            <url>http://riverock.sourceforge.net/repo</url>
        </repository>
        <repository>
            <id>ibiblio.org</id>
            <url>http://mirrors.ibiblio.org/pub/mirrors/maven2</url>
        </repository>
        <repository>
            <id>snapshots</id>
            <name>Maven Snapshot Development Repository</name>
            <url>http://snapshots.maven.codehaus.org/maven2</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <!--License	MIT-->
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
<!--
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.14</version>
            <scope>compile</scope>
        </dependency>
-->
        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jsr173_api</artifactId>
            <version>1.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>2.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.sun.xml.bind</groupId>
            <artifactId>jaxb-impl</artifactId>
            <version>2.1.12</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.9</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>1.13</version>
        </dependency>
        <dependency>
            <groupId>hsqldb</groupId>
            <artifactId>hsqldb</artifactId>
            <version>1.8.0.7</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>oracle</groupId>
            <artifactId>oracle</artifactId>
            <version>10g</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.14</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <distributionManagement>
        <site>
            <id>website</id>
            <url>scp://shell.sourceforge.net/home/groups/d/db/dbrevision/htdocs</url>
        </site>
        <repository>
            <id>riverock-repository</id>
            <name>Riverock repository</name>
            <url>scp://shell.sourceforge.net/home/groups/r/ri/riverock/htdocs/repo</url>
        </repository>
    </distributionManagement>


    <reporting>
        <plugins>
<!--
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
            </plugin>
-->
<!--
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>taglist-maven-plugin</artifactId>

                <configuration>
                    <tags>
                        <tag>@fixme</tag>
                        <tag>FIXME</tag>
                        <tag>@todo</tag>
                        <tag>TODO</tag>
                    </tags>
                </configuration>
            </plugin>
-->
<!--
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>jdepend-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>javancss-maven-plugin</artifactId>
            </plugin>
-->
<!--
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-changelog-plugin</artifactId>
            </plugin>
-->
<!--
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <links>
                        <link>http://java.sun.com/j2se/1.5.0/docs/api</link>
                        <link>http://jakarta.apache.org/commons/collections/apidocs</link>
                        <link>http://www.junit.org/junit/javadoc/</link>
                    </links>
                </configuration>
            </plugin>
-->
        </plugins>
    </reporting>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-antrun-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
<!--
<phase>site-deploy</phase>
-->
                        <configuration>
                            <tasks>
                                <copy todir="target/site/xsd" overwrite="true">
                                    <fileset dir="src/main/xsd">
                                        <include name="*.xsd"/>
                                    </fileset>
                                </copy>
                            </tasks>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.8.2</version>
                <configuration>
                    <locales>en</locales>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <compilerArgument>-parameters</compilerArgument>
                    <source>1.8</source>
                    <target>1.8</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <showDeprecation>true</showDeprecation>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
